@@ -1,6 +1,11 @@
 CHANGES IN VERSION 1.12.0
 -------------------------
 
+NEW FEATURES
+
+    o BamSampler draws a random sample from BAM file records, obeying
+    any restriction by ScanBamParam().
+
 USER-VISIBLE CHANGES
 
     o bamPath and bamIndicies applied to BamViews returns named
